--- a/index.html
+++ b/index.html
@@ -1,25 +1,33 @@
 <style>
+  input {
+	padding-right: 5px;
+  }
   .inputs {
+	margin: 25px auto;
+	width: 1244px;
+	border: 1px solid black;
 	padding: 20px;
     display: grid;
 	justify-content: space-evenly;
 	align-content: space-evenly;
 	grid-template-rows: 1fr 1fr 1fr;
 	grid-template-columns: 1fr 1fr;
+	margin-bottom: 0;
+	background-color: lightblue;
   }
   input {
     text-align: right;
   }
   div.options {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
 	flex-wrap: wrap;
   }
   div.option-block {
     width: 400px;
 	border: 1px solid black;
 	text-align: center;
-	margin-bottom: 15px;
+	margin: 20px 20px;
   }
   .field-block {
     margin-bottom: 20px;
@@ -43,7 +51,18 @@
 	padding-bottom: 20px;
 	padding-top: 5px;
   }
-  .best-option .total-block {
+  .total-block h3 {
+	margin: 10px auto;
+  }
+  
+  .field-block .title {
+	margin: 0;
+	padding: 15px;
+	background-color: lightblue;
+	margin-bottom: 15px;
+  }
+  .best-option .total-block,
+  .best-option .field-block .title  {
 	background-color: lightgreen;
   }
   .total-block {
@@ -55,12 +74,12 @@
   }
   .total-block .total-percentage {
 	padding-left: 55px;
-	font-size: 24px;
+	font-size: 18px;
   }
 </style>
 <div class="inputs">
   <div class="label-input">
-    <label>Bruto</label>
+    <label><b>BRUTO</b></label>
     <input type="money" id="bruto" value="60000"/>
   </div>
   <div class="label-input">
@@ -185,7 +204,7 @@
 		pidObj.ukupnoProcenat = procenatBruto(pidObj.ukupnoPid + pidObj.ostaliTroskovi);
 		domElement.innerHTML = `
 			<div class="field-block">
-			  <h3>${pidObj.title}</h3>
+			  <h3 class="title">${pidObj.title}</h3>
 			  <div class="label-input">
 				<label>Osnovica</label>
 				<input type="text" class="osnovica"
@@ -289,7 +308,7 @@
 					   disabled />
 			  </div>
 			  <div class="label-input total-percentage-container">
-				<label class="total-percentage"><b>${pidObj.ukupnoProcenat}%</b></label>
+				<label class="total-percentage"><b>TROŠKOVI POSLOVANJA: ${pidObj.ukupnoProcenat}%</b></label>
 			  </div>
 			</div>
 		`;
