--- a/index.html
+++ b/index.html
@@ -1,82 +1,82 @@
 <style>
-   input {
-   padding-right: 5px;
-   }
-   .inputs {
-   margin: 25px auto;
-   width: 1244px;
-   border: 1px solid black;
-   padding: 20px;
-   display: grid;
-   justify-content: space-evenly;
-   align-content: space-evenly;
-   grid-template-rows: 1fr 1fr 1fr;
-   grid-template-columns: 1fr 1fr;
-   margin-bottom: 0;
-   background-color: #9b7fe9;
-   }
-   input {
-   text-align: right;
-   }
-   .sakrivalica{display:none!important}
-   .show{display:block!important}
-   div.options {
-   display: flex;
-   justify-content: center;
-   flex-wrap: wrap;
-   }
-   div.option-block {
-   width: 400px;
-   border: 1px solid black;
-   text-align: center;
-   margin: 20px 20px;
-   }
-   .field-block {
-   margin-bottom: 20px;
-   }
-   .label-input {
-   width: 360px;
-   text-align: right;
-   }
-   div.label-input input {
-   margin: 2px 10px;
-   }
-   .inputs .label-input {
-   width: 500px;
-   }
-   h4 {
-   margin: 5px auto;
-   }
-   .total-block {
-   background-color: #9b7fe9;
-   margin-bottom: 0;
-   padding-bottom: 20px;
-   padding-top: 5px;
-   }
-   .total-block h3 {
-   margin: 10px auto;
-   }
-   .field-block .title {
-   margin: 0;
-   padding: 15px;
-   background-color: #9b7fe9;
-   margin-bottom: 15px;
-   }
-   .best-option .total-block,
-   .best-option .field-block .title {
-   background-color: lightgreen;
-   }
-   .total-block {
-   font-weight: bold;
-   }
-   .total-percentage-container {
-   padding-top: 15px;
-   text-align: center;
-   }
-   .total-block .total-percentage {
-   padding-left: 55px;
-   font-size: 18px;
-   }
+	input {
+		padding-right: 5px;
+	}
+	.inputs {
+		margin: 25px auto;
+		width: 1244px;
+		border: 1px solid black;
+		padding-top: 20px;
+		display: grid;
+		justify-content: space-evenly;
+		align-content: space-evenly;
+		grid-template-rows: 1fr 1fr;
+		grid-template-columns: 1fr 1fr;
+		margin-bottom: 0;
+		background-color: #9b7fe9;
+	}
+	input {
+		text-align: right;
+	}
+	.sakrivalica{display:none!important}
+	.show{display:block!important}
+	div.options {
+		display: flex;
+		justify-content: center;
+		flex-wrap: wrap;
+	}
+	div.option-block {
+		width: 400px;
+		border: 1px solid black;
+		text-align: center;
+		margin: 20px 20px;
+	}
+	.field-block {
+		margin-bottom: 20px;
+	}
+	.label-input {
+		width: 360px;
+		text-align: right;
+	}
+	div.label-input input {
+		margin: 2px 10px;
+	}
+	.inputs .label-input {
+		width: 500px;
+	}
+	h4 {
+		margin: 5px auto;
+	}
+	.total-block {
+		background-color: #9b7fe9;
+		margin-bottom: 0;
+		padding-bottom: 20px;
+		padding-top: 5px;
+	}
+	.total-block h3 {
+		margin: 10px auto;
+	}
+	.field-block .title {
+		margin: 0;
+		padding: 15px;
+		background-color: #9b7fe9;
+		margin-bottom: 15px;
+	}
+	.best-option .total-block,
+	.best-option .field-block .title {
+		background-color: lightgreen;
+	}
+	.total-block {
+		font-weight: bold;
+	}
+	.total-percentage-container {
+		padding-top: 15px;
+		text-align: center;
+	}
+	.total-block .total-percentage {
+		padding-left: 55px;
+		font-size: 18px;
+	}
 </style>
 <div class="inputs">
    <div class="label-input">
