--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 					(pidObj.title === 'Paušalac' ? `
 						<div class="label-input">
 							<label>Kalkulator</label>
-							<input type="text" id="pausal-kalkulator" value="${pausalKalkulator}" />
+							<input type="text" id="pausal-kalkulator" value="${format(pausalKalkulator)}" />
 						</div>
 					` : '') +
 					(pidObj.title === 'Knjigaš' ? `
