--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
 					` : '') +
 					(pidObj.title === 'Paušalac' ? `
 						<div class="label-input">
-							<label>Kalkulator</label>
+							<label><a target="_blank" href="https://eporezi.purs.gov.rs/kalkulator-pausalnog-poreza-i-doprinosa.html">
+								Kalkulator</a></label>
 							<input type="text" id="pausal-kalkulator" value="${format(pausalKalkulator)}" />
 						</div>
 					` : '') +
