--- a/uporedni-kalkulator-2.html
+++ b/uporedni-kalkulator-2.html
@@ -24,9 +24,9 @@ background-color: #E6E6FA;
 .inputs2 {
 margin: 0px;
 padding: 20px;
-height: 50px;
+height: 60px;
 display: block;
-font-size: 25px;
+font-size: 20px;
 text-align: left;
 background-color: #E6E6FA;
 border: 1px solid lightgray;
@@ -36,7 +36,7 @@ border: 1px solid lightgray;
 font-size: 25px;
 }
 .inputs2 input {
-font-size: 25px;
+font-size: 20px;
 }
 .sakrivalica{display:none!important}
 .show{display:block!important}
@@ -71,7 +71,6 @@ margin: 2px 10px;
 width: 45%;
 text-align: left!important;
 padding-left: 15px;
-padding-top: 5px;
 float: left;
 display: inline-block;
 position:relative;
@@ -92,15 +91,18 @@ width: 100%;
 margin: 0px;
 padding: 0px;
 }
+.inputs2 input {
+max-width:115px!important;
+}
 .inputs2 .label-input2 {
 width: 100%;
 text-align:left!important;
 float:left!important;
 padding-left:0px;
-padding-top: 20px;
+padding-top: 10px;
 }
 .inputs2 {
-height: 120px;
+height: 150px;
 }
 div.option-block {
 width: 100%;
@@ -120,6 +122,7 @@ margin:0 0 0 10px;
 width: 280px;
 left: -60px;
 }
+
 }
 
 h4 {
@@ -195,39 +198,69 @@ max-width: 150px;
 }
 .tooltip .tooltiptext {
   display: none;
-  width: 300px;
+  width: 280px;
   background-color: #9b7fe9;
   color: #fff;
   text-align: center;
   padding: 10px;
-left:-60px;
+left:-30px;
   /* Position the tooltip */
   position: absolute;
   z-index: 1;
+  border: 1px solid #fff;
 }
 .tooltip .tooltiptext4 {
   display: none;
-  width: 300px;
+  width: 280px;
   background-color: #9b7fe9;
   color: #fff;
   text-align: center;
   padding: 10px;
-left:-90px;
+left:-70px;
   /* Position the tooltip */
   position: absolute;
   z-index: 1;
+  border: 1px solid #fff;
 }
 .tooltip .tooltiptext3 {
   display: none;
-  width: 300px;
+  width: 280px;
   background-color: #9b7fe9;
   color: #fff;
   text-align: center;
   padding: 10px;
-left:-40px;
+left:-20px;
   /* Position the tooltip */
   position: absolute;
   z-index: 1;
+  border: 1px solid #fff;
+}
+
+.tooltip .tooltiptext5 {
+  display: none;
+  width: 280px;
+  background-color: #9b7fe9;
+  color: #fff;
+  text-align: center;
+  padding: 10px;
+left:-160px;
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+  border: 1px solid #fff;
+}
+.tooltip .tooltiptext2 {
+  display: none;
+  width: 280px;
+  background-color: #9b7fe9;
+  color: #fff;
+  text-align: center;
+  padding: 10px;
+left:-30px;
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+  border: 1px solid #fff;
 }
 .block {
   display: block !important;
@@ -241,8 +274,8 @@ left:-40px;
     text-align: center;
     width: 1.8ex;
     height: 1.8ex;
-    font-size: 1.4ex;
-    line-height: 1.8ex;
+  
+    line-height: 16px;
     border-radius: 1.2ex;
     margin-right: 4px;
     padding: 2px;
@@ -262,19 +295,32 @@ left:-40px;
 </style>
 <div id="container">
 <div class="inputs2">
-    <div class="label-input">
-      <label><b>MESEČNI PRILIV</b></label>
-      <input type="money" id="bruto" value="50.000,00"/>
+    <div class="label-input"><div>
+      <label><b>MESEДЊNI PRILIV</b></label>
+      <input type="money" id="bruto" value="50.000,00"/></div>
+	  <div style="font-size:18px; padding-top:10px; vertical-align:middle; height:25px;display:inline-block;">
+	  RADNI ODNOS
+        <input type="checkbox" id="radni-odnos" autocomplete="off"/>
+		
+<div onmousedown="show5()" class="tooltip"style="font-size:16px;">
+<a class="infolink" href="javascript:void(0)"></a>
+  <div id="tooltip5"  class="tooltiptext5"><span class="close" onmouseup="hide5()">x</span>
+    <span>Ovo polje obeleЕѕavate </br>samo ako ste u radnom odnosu u kompaniji u Srbiji, a ovaj prihod je vaЕЎa dodatna delatnost.
+</span>
+  </div>
+</div>
+
+</div>
     </div>
     <div class="label-input2">
-        Radni odnos
-        <input type="checkbox" id="radni-odnos" autocomplete="off"/>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	<div>
         DETALJAN PREGLED
         <input type="checkbox" id="myCheck" autocomplete="off"
             onclick="myFunction('sakrivalica')">
-        <br/>
+			</div>
+        <div style="font-size:18px; padding-top:10px; vertical-align:middle; height:25px;display:inline-block;">
         <img src="legenda.jpg" style="vertical-align: middle;"><h6 style="font-size:16px; line-height:30px; margin:0px;display: inline;font-weight:200;"> = najisplativija opcija za zadati priliv*</h6>
+		</div>
     </div>
 </div>
 <div class="options">
@@ -338,25 +384,25 @@ const procenatBruto = x => Math.round(x * 10000 / bruto) / 100;
 const renderAll = () => {
 const fizickoLiceElement = document.getElementById('fizicko-lice');
 const fizickoLice = createDefaultPidObj();
-fizickoLice.title = 'Fizičko lice';
-fizickoLice.specificnaVrednostZaTipOporezivanja = 'Normirani trošak';
+fizickoLice.title = 'FiziДЌko lice';
+fizickoLice.specificnaVrednostZaTipOporezivanja = 'Normirani troЕЎak';
 fizickoLice.teretZaposlenog.nezaposlenost = 0;
 fizickoLice.teretZaposlenog.porez = 20;
 
 const pausalElement = document.getElementById('pausalac');
 const pausal = createDefaultPidObj();
 pausal.specificnaVrednostZaTipOporezivanja = 'Kalkulator';
-pausal.title = 'Paušalac';
+pausal.title = 'PauЕЎalac';
 pausal.editableOsnovica = true;
 
 const knjigasElement = document.getElementById('knjigas');
 const knjigas = createDefaultPidObj();
-knjigas.title = 'Knjigaš';
+knjigas.title = 'KnjigaЕЎ';
 knjigas.specificnaVrednostZaTipOporezivanja = 'Knjigovodja';
 knjigas.licniTroskovi = 0;
 knjigas.placaPorezNaDohodakGradjana = true;
 knjigas.postojiNeoporeziviDeoNaTeretZaposlenog = true;
-knjigas.neoporeziviDeoNaTeretZaposlenog = 16300;
+knjigas.neoporeziviDeoNaTeretZaposlenog = 18300;
 
 render(fizickoLice, fizickoLiceElement);
 render(pausal, pausalElement);
@@ -379,19 +425,32 @@ const render = (pidObj, domElement) => {
 
 pidObj.domElement = domElement;
 
-if (pidObj.title === "Fizičko lice") {
+if (pidObj.title === "FiziДЌko lice") {
 pidObj.osnovica = bruto - neoporeziviDeo - (bruto - neoporeziviDeo) * normiraniTrosak / 100;
-} else if (pidObj.title === "Paušalac") {
-pidObj.osnovica = pausalKalkulator / 0.4655;
-} else if (pidObj.title === "Knjigaš") {
-pidObj.ostaliTroskovi = cenaKnjigovodstva;
-pidObj.osnovica = 25801;
+} else if (pidObj.title === "PauЕЎalac") {
+if (radniOdnos = radniOdnosElement.checked) {
+pidObj.osnovica = pausalKalkulator * 100 / 35.5; 
 }
+else {
+pidObj.osnovica = pausalKalkulator / 0.4655; 
+}
+} else if (pidObj.title === "KnjigaЕЎ") {
+pidObj.ostaliTroskovi = cenaKnjigovodstva;
+pidObj.osnovica = 28402;
+}
+
+
+if (pidObj.title === "KnjigaЕЎ") {
+pidObj.porezz = (pidObj.osnovica - 18300) * pidObj.teretZaposlenog.porez / 100;
+} else {
+pidObj.porezz = (pidObj.osnovica) * pidObj.teretZaposlenog.porez / 100;
+} 
+
 
 if (pidObj.postojiNeoporeziviDeoNaTeretZaposlenog) {
 pidObj.teretZaposlenog.ukupno = (pidObj.teretZaposlenog.pio * pidObj.osnovica +
 pidObj.teretZaposlenog.zdravstveno * pidObj.osnovica +
-(pidObj.teretZaposlenog.porez * (pidObj.osnovica - 16300)) +
+(pidObj.teretZaposlenog.porez * (pidObj.osnovica - 18300)) +
 pidObj.teretZaposlenog.nezaposlenost * pidObj.osnovica) / 100;
 } else {
 pidObj.teretZaposlenog.procenatOsnovice = pidObj.teretZaposlenog.pio +
@@ -406,8 +465,8 @@ pidObj.teretPoslodavca.ukupno = pidObj.osnovica * pidObj.teretPoslodavca.procena
 
 if (pidObj.placaPorezNaDohodakGradjana) {
 const osnovicaZaPorezNaDohodakGradjana = (bruto -
-(pidObj.teretZaposlenog.ukupno + pidObj.teretPoslodavca.ukupno + pidObj.ostaliTroskovi + 15420 + licniTroskovi));
-pidObj.porezNaDohodakGradjana = osnovicaZaPorezNaDohodakGradjana * 10 / 110;
+(pidObj.teretZaposlenog.ukupno + pidObj.teretPoslodavca.ukupno + pidObj.ostaliTroskovi + 17011 + licniTroskovi));
+pidObj.porezNaDohodakGradjana = osnovicaZaPorezNaDohodakGradjana * 10 / 100;
 }
 
 pidObj.ukupnoPid = pidObj.teretZaposlenog.ukupno + pidObj.teretPoslodavca.ukupno + pidObj.porezNaDohodakGradjana;
@@ -416,34 +475,34 @@ pidObj.ukupnoProcenat = procenatBruto(pidObj.ukupnoPid + pidObj.ostaliTroskovi);
 domElement.innerHTML = `
 <div class="field-block">
 <h3 class="title">${pidObj.title}</h3>` +
-(pidObj.title === 'Fizičko lice' ? `
+(pidObj.title === 'FiziДЌko lice' ? `
 <div class="label-input">
 <label>
 
 <div onmousedown="show()" class="tooltip">
-<a class="infolink" href="#"></a>
+<a class="infolink" href="javascript:void(0)"></a>
   <div id="tooltip"  class="tooltiptext"><span class="close" onmouseup="hide()">x</span>
-    <span>Troškovi koji se priznaju bez dokazivanja, definisani su zakonom i zavise od vrste pruženih usluga.</span>
+    <span>TroЕЎkovi koji se priznaju bez dokazivanja, definisani su zakonom i zavise od vrste pruЕѕenih usluga.</span>
   </div>
 </div>
 
 
 
-Normirani troškovi
+Normirani troЕЎkovi
 
 
 </label>
 <input type="text" id="normirani-troskovi" value="${format(normiraniTrosak)}%" />
 </div>
 ` : '') +
-(pidObj.title === 'Paušalac' ? `
+(pidObj.title === 'PauЕЎalac' ? `
 <div class="label-input">
 <label>
 
 <div onmousedown="show2()" class="tooltip">
-<a class="infolink" href="#"></a>
-  <div id="tooltip2"  class="tooltiptext"><span class="close" onmouseup="hide2()">x</span>
-    <span>Kliknite na link i unesite tražene podatke kako biste izračunali visinu poreza i doprinosa, a zatim ih unesete ovde
+<a class="infolink" href="javascript:void(0)"></a>
+  <div id="tooltip2"  class="tooltiptext2"><span class="close" onmouseup="hide2()">x</span>
+    <span>Kliknite na link i unesite traЕѕene podatke kako biste izraДЌunali visinu poreza i doprinosa, a zatim ih unesete ovde
 </span>
   </div>
 </div>
@@ -454,14 +513,14 @@ Kalkulator poreza</a></label>
 <input type="text" id="pausal-kalkulator" value="${format(pausalKalkulator)}" />
 </div>
 ` : '') +
-(pidObj.title === 'Knjigaš' ? `
+(pidObj.title === 'KnjigaЕЎ' ? `
 <div class="label-input">
 <label>
 
 <div onmousedown="show3()" class="tooltip">
- <a class="infolink" href="#"></a>
+ <a class="infolink" href="javascript:void(0)"></a>
   <div id="tooltip3"  class="tooltiptext3"><span class="close" onmouseup="hide3()">x</span>
-    <span>Ako poslujete kao knjigaš neophodan vam je knjigovođa. Unesite cenu knjigovodstva kako biste dobili precizniji obračun.
+    <span>Ako poslujete kao knjigaЕЎ neophodan vam je knjigovoД‘a. Unesite cenu knjigovodstva kako biste dobili precizniji obraДЌun.
 </span>
   </div>
 </div>
@@ -474,15 +533,15 @@ Cena knjigovodstva</label>
 <label>
 
 <div onmousedown="show4()" class="tooltip">
- <a class="infolink" href="#"></a>
+ <a class="infolink" href="javascript:void(0)"></a>
   <div id="tooltip4"  class="tooltiptext4"><span class="close" onmouseup="hide4()">x</span>
-    <span>Računi koje platite za troškove poslovanja (npr. telefon, struja, internet…) sa preduzetničkog računa smanjiće osnovicu za obračun poreza na dohodak.
+    <span>RaДЌuni koje platite za troЕЎkove poslovanja (npr. telefon, struja, internetвЂ¦) sa preduzetniДЌkog raДЌuna smanjiД‡e osnovicu za obraДЌun poreza na dohodak.
 
 </span>
   </div>
 </div>
 
-Lični troškovi</label>
+LiДЌni troЕЎkovi</label>
 <input type="text" id="licni-troskovi" value="${format(licniTroskovi)}" />
 </div>
 ` : '') +
@@ -507,7 +566,7 @@ value="${format(pidObj.osnovica * pidObj.teretZaposlenog.zdravstveno / 100)}"/>
 <div class="label-input">
 <label>Porez (${format(pidObj.teretZaposlenog.porez)}%)</label>
 <input type="text" disabled
-value="${format((pidObj.osnovica - 16300) * pidObj.teretZaposlenog.porez / 100)}"/>
+value="${format(pidObj.porezz)}"/>
 </div>
 <div class="label-input">
 <label>Nezaposlenost (${format(pidObj.teretZaposlenog.nezaposlenost)}%)</label>
@@ -544,7 +603,7 @@ disabled />
 </div>
 </div>
 <div class="field-block">
-<h4>Porez na dohodak građana</h4>
+<h4>Porez na dohodak graД‘ana</h4>
 <div class="label-input">
 <label>Porez na doh</label>
 <input type="text" value="${format(pidObj.porezNaDohodakGradjana)}" disabled />
@@ -554,7 +613,7 @@ disabled />
 <div class="field-block total-block">
 <h3>Ukupno</h3>
 <div class="label-input">
-<label><b>Ostali troškovi</b></label>
+<label><b>Ostali troЕЎkovi</b></label>
 <input type="text"
 value="${format(pidObj.ostaliTroskovi)}"
 disabled />
@@ -568,23 +627,23 @@ disabled />
 <input type="text" value="${format(pidObj.neto)}" disabled />
 </div>
 <div class="label-input total-percentage-container">
-<label class="total-percentage"><b>TROŠKOVI POSLOVANJA:</b> <h2>${format(pidObj.ukupnoProcenat)}%</h2></label>
+<label class="total-percentage"><b>TROЕ KOVI POSLOVANJA:</b> <h2>${format(pidObj.ukupnoProcenat)}%</h2></label>
 </div>
 </div>`;
 
-if (pidObj.title === "Fizičko lice") {
+if (pidObj.title === "FiziДЌko lice") {
 let normiraniTrosakElement = document.getElementById('normirani-troskovi');
 normiraniTrosakElement.addEventListener('change', () => {
 normiraniTrosak = getNumberValue(normiraniTrosakElement);
 render(pidObj, domElement);
 });
-} else if (pidObj.title === "Paušalac") {
+} else if (pidObj.title === "PauЕЎalac") {
 let pausalKalkulatorElement = document.getElementById('pausal-kalkulator');
 pausalKalkulatorElement.addEventListener('change', () => {
 pausalKalkulator = getNumberValue(pausalKalkulatorElement);
 render(pidObj, domElement);
 });
-} else if (pidObj.title === "Knjigaš") {
+} else if (pidObj.title === "KnjigaЕЎ") {
 let cenaKnjigovodstvaElement = document.getElementById('cena-knjigovodstva');
 cenaKnjigovodstvaElement.addEventListener('change', () => {
 cenaKnjigovodstva = getNumberValue(cenaKnjigovodstvaElement);
@@ -606,43 +665,58 @@ updateState();
   document.getElementById("tooltip").classList.remove("block");
 }
 function show() {
- 
+ document.getElementById("tooltip5").classList.remove("block");
     document.getElementById("tooltip3").classList.remove("block");
   document.getElementById("tooltip2").classList.remove("block");
   document.getElementById("tooltip4").classList.remove("block");
    document.getElementById("tooltip").classList.add("block");
+
 }
  function hide2() {
   document.getElementById("tooltip2").classList.remove("block");
 }
 function show2() {
- 
+ document.getElementById("tooltip5").classList.remove("block");
     document.getElementById("tooltip3").classList.remove("block");
   document.getElementById("tooltip4").classList.remove("block");
   document.getElementById("tooltip").classList.remove("block");
   document.getElementById("tooltip2").classList.add("block");
+ 
+  
 }
  function hide3() {
   document.getElementById("tooltip3").classList.remove("block");
 }
 function show3() {
- 
-    document.getElementById("tooltip4").classList.remove("block");
+document.getElementById("tooltip").classList.remove("block");
+ document.getElementById("tooltip5").classList.remove("block");
   document.getElementById("tooltip2").classList.remove("block");
-  document.getElementById("tooltip").classList.remove("block");
-  document.getElementById("tooltip3").classList.add("block");
+    document.getElementById("tooltip4").classList.remove("block");
+   document.getElementById("tooltip3").classList.add("block");
+
 }
  function hide4() {
   document.getElementById("tooltip4").classList.remove("block");
 }
 function show4() {
- 
+ document.getElementById("tooltip5").classList.remove("block");
+document.getElementById("tooltip2").classList.remove("block");
+document.getElementById("tooltip").classList.remove("block");
+ document.getElementById("tooltip3").classList.remove("block");
+ document.getElementById("tooltip4").classList.add("block");
+
+}
+ function hide5() {
+  document.getElementById("tooltip5").classList.remove("block");
+}
+function show5() {
+ document.getElementById("tooltip4").classList.remove("block");
   document.getElementById("tooltip3").classList.remove("block");
   document.getElementById("tooltip2").classList.remove("block");
   document.getElementById("tooltip").classList.remove("block");
-  document.getElementById("tooltip4").classList.add("block");
+  document.getElementById("tooltip5").classList.add("block");
+ 
 }
-
 </script>
 <script>
     function myFunction(id) {
