--- a/index.html
+++ b/index.html
@@ -4,7 +4,296 @@
   rel="stylesheet"
 />
 
-<link href="style.css" rel="stylesheet" />
+<style>
+  body {
+    background-color: #fcfcfc;
+    font-family: "Raleway", sans-serif;
+    margin: 0px !important;
+    padding: 0px;
+  }
+  input {
+    padding-right: 5px;
+    text-align: right;
+    max-width: 100px;
+  }
+  .inputs {
+    margin: 15px auto;
+    padding: 10px;
+    display: grid;
+    font-size: 25px;
+    text-align: left;
+    background-color: #e6e6fa;
+  }
+  .inputs2 {
+    margin: 0px;
+    padding: 20px;
+    height: 60px;
+    display: block;
+    font-size: 20px;
+    text-align: left;
+    background-color: #e6e6fa;
+    border: 1px solid lightgray;
+  }
+
+  .inputs input {
+    font-size: 25px;
+  }
+  .inputs2 input {
+    font-size: 20px;
+  }
+  .sakrivalica {
+    display: none !important;
+  }
+  .show {
+    display: block !important;
+  }
+  div.options {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  div.option-block {
+    background-color: white;
+    width: 33.33%;
+    width: calc(100% / 3 - 42px);
+    text-align: center;
+    margin: 20px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 1px solid lightgray;
+  }
+  .field-block {
+    margin-bottom: 20px;
+  }
+  .label-input {
+    width: 90%;
+    width: calc(100% - 10px);
+    text-align: right;
+  }
+  div.label-input input {
+    margin: 2px 10px;
+  }
+  .inputs2 .label-input {
+    width: 45%;
+    text-align: left !important;
+    padding-left: 15px;
+    float: left;
+    display: inline-block;
+    position: relative;
+  }
+  .inputs2 .label-input2 {
+    width: 45%;
+    text-align: right !important;
+    padding-right: 15px;
+    float: right;
+    display: inline-block;
+    position: relative;
+    font-size: 18px;
+  }
+  @media only screen and (max-width: 790px) {
+    .inputs2 .label-input {
+      font-size: 18px;
+      width: 100%;
+      margin: 0px;
+      padding: 0px;
+    }
+    .inputs2 input {
+      max-width: 115px !important;
+    }
+    .inputs2 .label-input2 {
+      width: 100%;
+      text-align: left !important;
+      float: left !important;
+      padding-left: 0px;
+      padding-top: 10px;
+    }
+    .inputs2 {
+      height: 150px;
+    }
+    div.option-block {
+      width: 100%;
+      width: calc(100%);
+      text-align: center;
+      margin: 20px 0px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      border: 1px solid lightgray;
+    }
+    div.label-input input {
+      margin: 0 0 0 10px;
+    }
+    .tooltip .tooltiptext {
+      width: 280px;
+      left: -60px;
+    }
+  }
+
+  h4 {
+    margin: 5px auto;
+  }
+  h2 {
+    font-size: 40px;
+  }
+  .total-block {
+    background-color: #e6e6fa;
+    margin-bottom: 0;
+    padding-bottom: 20px;
+    padding-top: 5px;
+  }
+  .total-block h3 {
+    margin: 20px auto;
+    font-size: 25px;
+    text-transform: uppercase;
+  }
+  h3 {
+    margin: 10px auto;
+    font-size: 25px;
+    text-transform: uppercase;
+  }
+  .field-block .title {
+    margin: 0;
+    padding: 15px;
+    background-color: #e6e6fa;
+    margin-bottom: 20px;
+  }
+  .best-option .total-block,
+  .best-option .field-block .title {
+    background-color: #9b7fe9;
+  }
+  .total-block {
+    font-weight: bold;
+  }
+  .total-percentage-container {
+    padding-top: 20px;
+    text-align: center;
+    width: 100% !important;
+  }
+  .total-block .total-percentage {
+    font-size: 20px;
+  }
+
+  .inputs2 input {
+    max-width: 150px;
+  }
+
+  .tooltip {
+    position: relative;
+    display: inline-block;
+  }
+  .tooltip:hover {
+  }
+  .close {
+    color: red;
+    cursor: pointer;
+    float: right;
+    text-align: right;
+    display: block;
+    background: #fff;
+    color: #000;
+    padding: 0 5px;
+    border-radius: 50%;
+    font-size: 14px;
+  }
+  .close:hover {
+    cursor: pointer;
+  }
+  .tooltip .tooltiptext {
+    display: none;
+    width: 280px;
+    background-color: #9b7fe9;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    left: -30px;
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+    border: 1px solid #fff;
+  }
+  .tooltip .tooltiptext4 {
+    display: none;
+    width: 280px;
+    background-color: #9b7fe9;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    left: -70px;
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+    border: 1px solid #fff;
+  }
+  .tooltip .tooltiptext3 {
+    display: none;
+    width: 280px;
+    background-color: #9b7fe9;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    left: -20px;
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+    border: 1px solid #fff;
+  }
+
+  .tooltip .tooltiptext5 {
+    display: none;
+    width: 280px;
+    background-color: #9b7fe9;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    left: -160px;
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+    border: 1px solid #fff;
+  }
+  .tooltip .tooltiptext2 {
+    display: none;
+    width: 280px;
+    background-color: #9b7fe9;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    left: -30px;
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+    border: 1px solid #fff;
+  }
+  .block {
+    display: block !important;
+  }
+  .infolink:before {
+    content: "?";
+    display: inline-block;
+    font-family: sans-serif;
+    font-weight: bold;
+    text-align: center;
+    width: 1.8ex;
+    height: 1.8ex;
+
+    line-height: 16px;
+    border-radius: 1.2ex;
+    margin-right: 4px;
+    padding: 2px;
+    color: #9b7fe9;
+    background: white;
+    border: 1px solid #9b7fe9;
+    text-decoration: none;
+  }
+
+  .infolink:hover:before {
+    color: white;
+    background: #9b7fe9;
+    border-color: white;
+    text-decoration: none;
+  }
+</style>
 <div id="container">
   <div class="inputs2">
     <div class="label-input">
@@ -136,20 +425,20 @@
       const renderAll = () => {
         const fizickoLiceElement = document.getElementById("fizicko-lice");
         const fizickoLice = createDefaultPidObj();
-        fizickoLice.title = "FiziДЌko lice";
-        fizickoLice.specificnaVrednostZaTipOporezivanja = "Normirani troЕЎak";
+        fizickoLice.title = "Fizičko lice";
+        fizickoLice.specificnaVrednostZaTipOporezivanja = "Normirani trošak";
         fizickoLice.teretZaposlenog.nezaposlenost = 0;
         fizickoLice.teretZaposlenog.porez = 20;
 
         const pausalElement = document.getElementById("pausalac");
         const pausal = createDefaultPidObj();
         pausal.specificnaVrednostZaTipOporezivanja = "Kalkulator";
-        pausal.title = "PauЕЎalac";
+        pausal.title = "Paušalac";
         pausal.editableOsnovica = true;
 
         const knjigasElement = document.getElementById("knjigas");
         const knjigas = createDefaultPidObj();
-        knjigas.title = "KnjigaЕЎ";
+        knjigas.title = "Knjigaš";
         knjigas.specificnaVrednostZaTipOporezivanja = "Knjigovodja";
         knjigas.licniTroskovi = 0;
         knjigas.placaPorezNaDohodakGradjana = true;
@@ -258,7 +547,7 @@
 <div onmousedown="show()" class="tooltip">
 <a class="infolink" href="javascript:void(0)"></a>
   <div id="tooltip"  class="tooltiptext"><span class="close" onmouseup="hide()">x</span>
-    <span>Troškovi koji se priznaju bez dokazivanja, definisani su zakonom i zavise od vrste pruЕѕenih usluga.</span>
+    <span>Troškovi koji se priznaju bez dokazivanja, definisani su zakonom i zavise od vrste pruženih usluga.</span>
   </div>
 </div>
 
@@ -319,7 +608,7 @@ Cena knjigovodstva</label>
 <div onmousedown="show4()" class="tooltip">
  <a class="infolink" href="javascript:void(0)"></a>
   <div id="tooltip4"  class="tooltiptext4"><span class="close" onmouseup="hide4()">x</span>
-    <span>Računi koje platite za troškove poslovanja (npr. telefon, struja, internet…) sa preduzetničkog računa smanjiće osnovicu za obračun poreza na dohodak.
+    <span>Računi koje platite za troškove poslovanja (npr. telefon, struja, internet...) sa preduzetničkog računa smanjiće osnovicu za obračun poreza na dohodak.
 
 </span>
   </div>
@@ -428,13 +717,13 @@ disabled />
 <input type="text" value="${format(pidObj.neto)}" disabled />
 </div>
 <div class="label-input total-percentage-container">
-<label class="total-percentage"><b>TROŠKOVI POSLOVANJA:</b> <h2>${format(
+<label class="total-percentage"><b>TROЕ KOVI POSLOVANJA:</b> <h2>${format(
             pidObj.ukupnoProcenat
           )}%</h2></label>
 </div>
 </div>`;
 
-        if (pidObj.title === "FiziДЌko lice") {
+        if (pidObj.title === "Fizičko lice") {
           let normiraniTrosakElement =
             document.getElementById("normirani-troskovi");
           normiraniTrosakElement.addEventListener("change", () => {
